--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="header">
             <div class="header-inner">
                 <a class="logo" href="?file=首页">
-                    <img src="amWiki/images/logo.png" /><i></i>
+                    <img src="https://b-ssl.duitang.com/uploads/item/201706/21/20170621203304_HzBih.thumb.700_0.jpeg" /><i></i>
                     <b>克拉前端技术分享</b>
                     <span>1</span>
                 </a>
@@ -217,7 +217,7 @@
         </footer>
         <!-- mounts -->
         <div class="hidden" aw-include="mountLinks">
-            <script>AWConfig={"name":"克拉前端技术分享","ver":"1","testing":true,"version":"1","logo":"amWiki/images/logo.png","colour":"#4296eb","pageMounts":false,"githubUrl":"","libraryPrefix":""}</script>
+            <script>AWConfig={"name":"克拉前端技术分享","ver":"1","testing":true,"logo":"https://b-ssl.duitang.com/uploads/item/201706/21/20170621203304_HzBih.thumb.700_0.jpeg","version":"1","colour":"#4296eb","pageMounts":false,"githubUrl":"","libraryPrefix":""}</script>
         </div>
         <!-- js -->
         <div class="hidden">
